<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motile</string>
    <string name="MainActivity_STitle">Hello Motile! \n a sample app for testing around Robotium.</string>
    <string name="MainActivity_SWebViewButton">Webview</string>
    <string name="MainActivity_SCustomHTMLButton">Custom HTML</string>
    <string name="MainActivity_SImageViewButton">"Image View"</string>
    <string name="MainActivity_SRadioButton">"Radio Button"</string>
    <string name="MainActivity_SCheckBox">Check-Box</string>
    <string name="MainActivity_SToggleButton">Toggle Button</string>
    <string name="MainActivity_SSmallButton">Small Button</string>
    <string name="MainActivity_SSpinner">Spinner</string>
    <string name="MainActivity_SSWitch">Switch</string>
    <string name="MainActivity_SRatingBar">Rating Bar</string>
    <string name="MainActivity_STabs">Tabs</string>
    <string name="MainActivity_SListView">Test ListView</string>
    <string name="MainActivity_SGridView">Test GridView</string>
    <string name="MainActivity_SCalenderView">Test CalenderView</string>
    <string name="MainActivity_SDateTimePicker">Test DateTimeView</string>
    <string name="WebVeiwActivity_STitle">Hi WebView!</string>
    <string name="CustomHTMLWebViewActivity_STitle">Hi Custom HTML WebView!</string>
    <string name="ImageViewActivity_STitle">"Hi Image View!"</string>
    <string name="ImageViewActivity_STextView2">"Image Button"</string>
    <string name="ImageViewActivity_STextView3">"Image View"</string>
    <string name="RadioButtonActivity_STitle">Hi Radio Button Activity!</string>
    <string name="RadioButtonActivity_STextView1">Radio Buttons</string>
    <string name="RadioButtonActivity_SRadioButton1">First Radio</string>
    <string name="RadioButtonActivity_SRadioButton2">Second Radio</string>
    <string name="RadioButtonActivity_SRadioButton3">Third Radio</string>
    <string name="RadioButtonActivity_STextView2">Radio Group Buttons</string>
    <string name="RadioButtonActivity_SRadioOption1">Radio Button Option 1</string>
    <string name="RadioButtonActivity_SRadioOption2">Radio Button Option 2</string>
    <string name="RadioButtonActivity_SRadioOption3">Radio Button Option 3</string>
    <string name="CheckBoxActivity_STitle">Hi Check-Box Activity!</string>
    <string name="CheckBoxActivity_STextView1">CheckBox Options</string>
    <string name="CheckBoxActivity_SCheckBox1">First CheckBox</string>
    <string name="CheckBoxActivity_SCheckBox2">Second CheckBox</string>
    <string name="CheckBoxActivity_SCheckBox3">Third CheckBox</string>
    <string name="title_activity_toggle_button">ToggleButton</string>
    <string name="ToggleButtonActivity_STitle">Hi Toggle Button activity</string>
    <string name="ToggleButtonActivity_SToggleButton1">Toggle</string>
    <string name="SmallButtonActivity_STitle">Hi SmallButtonActivity</string>
    <string name="SmallButtonActivity_SSmallButton1">SmallButton</string>
    <string name="SpinnerActivity_STitle">Hi Spinner Activity</string>
    <string name="SpinnerActivity_STextView1">Selected Value: </string>
    <string name="SpinnerActivity_STextView2">no value</string>
    <string name="SwitchActivity_STitle">Hi SwitchActivity , it is not supported by minSDK will fix soon</string>
    <string name="SwitchActivity_SWitchText">MySwitch</string>
    <string name="RatingBarActivity_STitle">Hi RatingBarActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="TabsActivity_STitle">Hi Tabs</string>
    <string name="TabOneContentsActivity_STitle">Hi TabOneContentsActivity</string>
    <string name="TabTwoContentsActivity_STitle">Hi TabTwoContentsActivity</string>
    <string name="TabThreeContentsActivity_STitle">Hi TabThreeContentsActivity</string>
    <string name="title_activity_list_view">ListViewActivity</string>
    <string name="ListViewActivity_STitle">Hi List View activity!</string>
    <string name="ListViewActivity_SButton1">Select Contents</string>
    <string name="title_activity_grid_view">GridViewActivity</string>
    <string name="GridViewActivity_STitle">Hello GridView!</string>
    <string name="CalenderViewActivity_STitle">Hi CalenderViewActivity, it is not supported by minSDK will fix soon</string>
    <string name="DateTimePickerActivity_STitle">Hi DateTimePickerActivity</string>
    <string name="DateTimePickerActivity_SButton1">Get DateTime</string>
    <string name="DateTimePickerActivity_STextView1">Selected Date Time: </string>
    <string name="DateTimePickerActivity_STextView2">No Value</string>
    


</resources>