<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/MainActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="15dp"
        android:text="@string/MainActivity_STitle" />

    <Button
        android:id="@+id/MainActivity_WebViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MainActivity_Title"
        android:layout_below="@+id/MainActivity_Title"
        android:text="@string/MainActivity_SWebViewButton" />

    <Button
        android:id="@+id/MainActivity_ImageViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MainActivity_WebViewButton"
        android:layout_below="@+id/MainActivity_WebViewButton"
        android:text="@string/MainActivity_SImageViewButton" />

    <Button
        android:id="@+id/MainActivity_RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MainActivity_ImageViewButton"
        android:layout_below="@+id/MainActivity_ImageViewButton"
        android:text="@string/MainActivity_SRadioButton" />
    
    <Button
        android:id="@+id/MainActivity_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MainActivity_RadioButton"
        android:layout_below="@+id/MainActivity_RadioButton"
        android:text="@string/MainActivity_SCheckBox" />

    <Button
        android:id="@+id/MainActivity_CustomHTMLButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_Title"
        android:text="@string/MainActivity_SCustomHTMLButton" />
    
    <Button
        android:id="@+id/MainActivity_ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_CustomHTMLButton"
        android:text="@string/MainActivity_SToggleButton" />
    
    <Button
        android:id="@+id/MainActivity_SmallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_ToggleButton"
        android:text="@string/MainActivity_SSmallButton" />
    
    <Button
        android:id="@+id/MainActivity_Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_SmallButton"
        android:text="@string/MainActivity_SSpinner" />
   
     <Button
        android:id="@+id/MainActivity_SWitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_Spinner"
        android:text="@string/MainActivity_SSWitch" />
   
     <Button
        android:id="@+id/MainActivity_RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_SWitch"
        android:text="@string/MainActivity_SRatingBar" />
     
     <Button
        android:id="@+id/MainActivity_Tabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MainActivity_RatingBar"
        android:text="@string/MainActivity_STabs" />

     <Button
         android:id="@+id/MainActivity_ListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/MainActivity_SWitch"
         android:layout_alignBottom="@+id/MainActivity_SWitch"
         android:layout_alignLeft="@+id/MainActivity_CheckBox"
         android:text="@string/MainActivity_SListView" />

     <Button
         android:id="@+id/MainActivity_CalenderView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/MainActivity_ListView"
         android:layout_below="@+id/MainActivity_GridView"
         android:text="@string/MainActivity_SCalenderView" />

     <Button
         android:id="@+id/MainActivity_DateTimePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/MainActivity_CalenderView"
         android:layout_below="@+id/MainActivity_CalenderView"
         android:text="@string/MainActivity_SDateTimePicker" />

     <Button
         android:id="@+id/MainActivity_GridView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/MainActivity_Tabs"
         android:layout_alignLeft="@+id/MainActivity_CalenderView"
         android:text="@string/MainActivity_SGridView" />

</RelativeLayout>