<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioButtonActivity" >

    <TextView
        android:id="@+id/RadioButtonActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/RadioButtonActivity_STitle" />

    <TextView
        android:id="@+id/RadioButtonActivity_TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_Title"
        android:layout_below="@+id/RadioButtonActivity_Title"
        android:layout_marginTop="26dp"
        android:text="@string/RadioButtonActivity_STextView1" />

    <RadioButton
        android:id="@+id/RadioButtonActivity_RadioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_TextView1"
        android:layout_below="@+id/RadioButtonActivity_TextView1"
        android:text="@string/RadioButtonActivity_SRadioButton1" />

	 <RadioButton
        android:id="@+id/RadioButtonActivity_RadioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_RadioButton1"
        android:layout_below="@+id/RadioButtonActivity_RadioButton1"
        android:text="@string/RadioButtonActivity_SRadioButton2" />
    
     <RadioButton
        android:id="@+id/RadioButtonActivity_RadioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_RadioButton2"
        android:layout_below="@+id/RadioButtonActivity_RadioButton2"
        android:text="@string/RadioButtonActivity_SRadioButton3" />
    
    <TextView
        android:id="@+id/RadioButtonActivity_TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_RadioButton3"
        android:layout_below="@+id/RadioButtonActivity_RadioButton3"
        android:layout_marginTop="31dp"
        android:text="@string/RadioButtonActivity_STextView2" />

    <RadioGroup
        android:id="@+id/RadioButtonActivity_RadioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RadioButtonActivity_TextView2"
        android:layout_below="@+id/RadioButtonActivity_TextView2" >

        <RadioButton
            android:id="@+id/RadioButtonActivity_RadioOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/RadioButtonActivity_SRadioOption1" />

        <RadioButton
            android:id="@+id/RadioButtonActivity_RadioOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonActivity_SRadioOption2" />

        <RadioButton
            android:id="@+id/RadioButtonActivity_RadioOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RadioButtonActivity_SRadioOption3" />
    </RadioGroup>

</RelativeLayout>