<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckBoxActivity" >

    <TextView
        android:id="@+id/CheckBoxActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="23dp"
        android:text="@string/CheckBoxActivity_STitle" />

    <TextView
        android:id="@+id/CheckBoxActivity_TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CheckBoxActivity_Title"
        android:layout_below="@+id/CheckBoxActivity_Title"
        android:layout_marginTop="36dp"
        android:text="@string/CheckBoxActivity_STextView1" />

    <CheckBox
        android:id="@+id/CheckBoxActivity_CheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CheckBoxActivity_TextView1"
        android:layout_below="@+id/CheckBoxActivity_TextView1"
        android:text="@string/CheckBoxActivity_SCheckBox1" />

    <CheckBox
        android:id="@+id/CheckBoxActivity_CheckBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CheckBoxActivity_CheckBox1"
        android:layout_below="@+id/CheckBoxActivity_CheckBox1"
        android:text="@string/CheckBoxActivity_SCheckBox2" />

    <CheckBox
        android:id="@+id/CheckBoxActivity_CheckBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CheckBoxActivity_CheckBox2"
        android:layout_below="@+id/CheckBoxActivity_CheckBox2"
        android:text="@string/CheckBoxActivity_SCheckBox3" />

</RelativeLayout>