<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerActivity" >

    <TextView
        android:id="@+id/SpinnerActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SpinnerActivity_STitle" />

    <Spinner
        android:id="@+id/SpinnerActivity_Spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/SpinnerActivity_Title" />

    <TextView
        android:id="@+id/SpinnerActivity_TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/SpinnerActivity_Spinner1"
        android:layout_marginTop="18dp"
        android:text="@string/SpinnerActivity_STextView1" />

    <TextView
        android:id="@+id/SpinnerActivity_TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/SpinnerActivity_TextView1"
        android:layout_alignBottom="@+id/SpinnerActivity_TextView1"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/SpinnerActivity_TextView1"
        android:text="@string/SpinnerActivity_STextView2" />
    
</RelativeLayout>