<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageViewActivity" >

    <TextView
        android:id="@+id/ImageViewActivity_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/ImageViewActivity_STitle" />

    <TextView
        android:id="@+id/ImageViewActivity_TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageViewActivity_Title"
        android:layout_below="@+id/ImageViewActivity_TextView3"
        android:layout_marginTop="143dp"
        android:text="@string/ImageViewActivity_STextView2" />
	
	<ImageView
        android:id="@+id/ImageViewActivity_ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageViewActivity_TextView3"
        android:layout_below="@+id/ImageViewActivity_TextView3"
        android:src="@drawable/ic_launcher" 
        android:contentDescription="My first ImageView1"/>
    
    <TextView
        android:id="@+id/ImageViewActivity_TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageViewActivity_Title"
        android:layout_below="@+id/ImageViewActivity_Title"
        android:layout_marginTop="48dp"
        android:text="@string/ImageViewActivity_STextView3" />

    <ImageButton
        android:id="@+id/ImageViewActivity_ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageViewActivity_TextView2"
        android:layout_below="@+id/ImageViewActivity_TextView2"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageViewActivity_ImageView"
        android:layout_below="@+id/ImageViewActivity_ImageView"
        android:layout_marginTop="28dp"
        android:src="@drawable/tab_icon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_marginLeft="59dp"
        android:layout_toRightOf="@+id/ImageViewActivity_Title"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="16dp"
        android:src="@drawable/tab_icon" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ImageViewActivity_ImageButton"
        android:layout_alignRight="@+id/imageView2"
        android:src="@drawable/tab_icon" />

</RelativeLayout>